Table "roles" {
  "id" int8 [pk, not null, increment]
  "name" varchar(50) [unique, not null, note: 'admin, area_lead, worker, finance']
}

Table "contract_types" {
  "id" int8 [pk, not null, increment]
  "name" varchar(200) [not null]
  "annual_offdays" int4 [not null]
}

Table "event_types" {
  "id" int8 [pk, not null, increment]
  "code" varchar(50) [unique, not null, note: 'horario, proyecto, ausencia, festivo']
  "label" varchar(200) [not null]
}

Table "event_collections" {
  "id" int8 [pk, not null, increment]
  "key" varchar(200) [unique, not null, note: 'horario_daniel, vacaciones_contrato_x']
  "name" varchar(300) [not null]
  "description" text
}

Table "areas" {
  "id" int8 [pk, not null, increment]
  "name" varchar(200) [not null]
  "description" text
  "lead_user_id" int8
}

Table "users" {
  "id" int8 [pk, not null, increment]
  "primary_area_id" int8
  "schedule_id" int8
  "contract_type_id" int8 [not null]
  "role_id" int8 [not null]
  "email" varchar(320) [unique, not null]
  "full_name" varchar(200) [not null]
  "birthday" date
  "password_hash" varchar(500)
  "created_at" timestamptz [not null, default: `CURRENT_TIMESTAMP`]
  "deleted_at" timestamptz
  "avatar_url" text

  Indexes {
    primary_area_id [type: btree, name: "users_idx_users_primary_area_id"]
    role_id [type: btree, name: "users_index_2"]
  }
}

Table "area_members" {
  "id" int8 [pk, not null, increment]
  "area_id" int8 [not null]
  "user_id" int8 [not null]
  "is_area_leader" bool [not null]

  Indexes {
    (user_id, area_id) [type: btree, unique, name: "area_members_idx_area_members_user_id_area_id"]
    area_id [type: btree, name: "area_members_idx_area_members_area_id"]
  }
}

Table "days_off" {
  "id" int8 [pk, not null, increment]
  "user_id" int8 [not null]
  "year" int4 [not null]
  "amount" int4 [not null]
  "used" int4 [not null, default: 0]

  Indexes {
    (user_id, year) [type: btree, unique, name: "days_off_idx_leave_balances_user_id_year"]
  }
  Note: 'One row per user per year. No annual reset job needed.'
}

Table "events" {
  "id" int8 [pk, not null, increment]
  "event_type_id" int8 [not null]
  "title" varchar(300) [not null]
  "description" text
  "all_day" bool [not null, default: false]
  "starts_at" timestamptz [not null]
  "ends_at" timestamptz [not null]
  "timezone" text [not null, default: 'America/Mexico_City']
  "rule" text [note: 'RFC 5545, e.g. FREQ=WEEKLY;BYDAY=MO,WE,FR;INTERVAL=1. NULL = single occurrence']
  "recurrence_until" timestamptz
  "created_by" int8
  "created_at" timestamptz [not null, default: `CURRENT_TIMESTAMP`]

  Indexes {
    event_type_id [type: btree, name: "events_idx_events_event_type_id"]
    (starts_at, ends_at) [type: btree, name: "events_idx_events_starts_at_ends_at"]
  }
  Note: 'starts_at/ends_at describe the FIRST occurrence. Recurring events are expanded at read time for the requested window.'
}

Table "event_participants" {
  "id" int8 [pk, not null, increment]
  "event_id" int8 [not null]
  "area_id" int8
  "user_id" int8

  Indexes {
    (area_id, event_id) [type: btree, unique, name: "event_participants_uq_event_participants_area"]
    (user_id, event_id) [type: btree, unique, name: "event_participants_uq_event_participants_user"]
    event_id [type: btree, name: "event_participants_idx_event_participants_event_id"]
  }
  Note: '''Exactly one of user_id / area_id set. Area rows fan out to all members at query time.
CHECK event_participants_one_target: num_nonnulls(area_id, user_id) = 1'''
}

Table "event_exceptions" {
  "id" int8 [pk, not null, increment]
  "event_id" int8 [not null]
  "original_start" timestamptz [not null, note: 'Identifies which occurrence this overrides']
  "is_cancelled" bool [not null, default: false]
  "starts_at" timestamptz
  "ends_at" timestamptz

  Indexes {
    (event_id, original_start) [type: btree, unique, name: "idx_event_exceptions_event_id_original_start"]
  }
}

Table "collection_events" {
  "id" int8 [pk, not null, increment]
  "event_id" int8 [not null]
  "collection_id" int8 [not null]

  Indexes {
    (collection_id, event_id) [type: btree, unique, name: "idx_collection_events_collection_id_event_id"]
  }
}

Table "absence_details" {
  "event_id" int8 [pk, not null]
  "reason" text [not null]
  "approved_by" int8
  "approved_at" timestamptz
  "created_at" timestamptz [not null, default: `CURRENT_TIMESTAMP`]
  "document_url" text
}

Table "logs" {
  "id" int8 [pk, not null, increment]
  "user_id" int8
  "action_id" int8
}

Table "storage_volumes" {
  "id" int8 [pk, not null, increment]
  "label" varchar(100) [unique, not null]
  "location" varchar(500)
  "is_writable" bool [not null, default: true]
  "max_storage" int8
  "created_at" timestamptz [not null, default: `CURRENT_TIMESTAMP`]
  Note: '''One row per mounted disk, identified by label. The mount path is not authoritative here: it comes from STORAGE_VOLUMES in the environment, because the same disk mounts at a different path inside the container than on the host.
CHECK storage_volumes_max_storage_positive: (max_storage IS NULL) OR (max_storage > 0)'''
}

Table "folders" {
  "id" int8 [pk, not null, increment]
  "parent_id" int8
  "name" varchar(255) [not null]
  "owner_id" int8 [not null]
  "created_at" timestamptz [not null, default: `CURRENT_TIMESTAMP`]
  "deleted_at" timestamptz

  Indexes {
    (parent_id, name) [type: btree, unique, name: "uq_folders_parent_name"]
    (owner_id, name) [type: btree, unique, name: "uq_folders_root_name"]
    owner_id [type: btree, name: "idx_folders_owner_id"]
    parent_id [type: btree, name: "idx_folders_parent_id"]
  }
  Note: '''The tree. parent_id NULL is a root; there may be many, one per owner. Cycles are rejected by the folders_no_cycle trigger, which nothing declarative can express.
CHECK folders_not_own_parent: parent_id IS DISTINCT FROM id'''
}

Table "files" {
  "id" int8 [pk, not null, increment]
  "folder_id" int8 [not null]
  "author_id" int8 [not null]
  "hash" bpchar(64) [not null]
  "name" varchar(255) [not null]
  "size" int8 [not null]
  "mime" varchar(255)
  "created_at" timestamptz [not null, default: `CURRENT_TIMESTAMP`]
  "deleted_at" timestamptz

  Indexes {
    (folder_id, name) [type: btree, unique, name: "uq_files_folder_name"]
    author_id [type: btree, name: "idx_files_author_id"]
    folder_id [type: btree, name: "idx_files_folder_id"]
    hash [type: btree, name: "idx_files_hash"]
  }
  Note: '''One row per appearance of content in the tree. hash is deliberately not unique: two rows sharing it share one physical file on disk, which is what deduplication means.
CHECK files_hash_is_hex: hash ~ \'^[0-9a-f]{64}$\'::text
CHECK files_size_nonneg: size >= 0'''
}

Table "file_locations" {
  "hash" bpchar(64) [not null]
  "storage_volume_id" int8 [not null]
  "verified_at" timestamptz
  "created_at" timestamptz [not null, default: `CURRENT_TIMESTAMP`]

  Indexes {
    (hash, storage_volume_id) [pk, type: btree, name: "file_locations_pkey"]
    storage_volume_id [type: btree, name: "idx_file_locations_volume"]
  }
  Note: '''Which volumes hold a given piece of content, keyed by hash rather than file id because the bytes are shared. Placement is recorded here and never derived from the hash: deriving it would reshuffle every existing file the moment a disk is added.
CHECK file_locations_hash_is_hex: hash ~ \'^[0-9a-f]{64}$\'::text'''
}

Table "folder_areas" {
  "folder_id" int8 [not null]
  "area_id" int8 [not null]
  "level" varchar(10) [not null]
  "created_at" timestamptz [not null, default: `CURRENT_TIMESTAMP`]

  Indexes {
    (folder_id, area_id) [pk, type: btree, name: "folder_areas_pkey"]
    area_id [type: btree, name: "idx_folder_areas_area_id"]
  }
  Note: '''Area grants on a folder, inherited by everything beneath it. Additive; the nearest ancestor carrying a row wins.
CHECK folder_areas_level_valid: (level)::text = ANY ((ARRAY[\'read\'::character varying, \'write\'::character varying])::text[])'''
}

Table "access_tokens" {
  "id" int8 [pk, not null, increment]
  "token_hash" bpchar(64) [unique, not null]
  "folder_id" int8
  "file_id" int8
  "level" varchar(10) [not null]
  "authorizer" int8 [not null]
  "expires_at" timestamptz [not null]
  "revoked_at" timestamptz
  "created_at" timestamptz [not null, default: `CURRENT_TIMESTAMP`]

  Indexes {
    file_id [type: btree, name: "idx_access_tokens_file_id"]
    folder_id [type: btree, name: "idx_access_tokens_folder_id"]
  }
  Note: '''Share links. Stores the hash of the token, never the token. Exactly one of folder_id / file_id is set. CHECK access_tokens_one_target: num_nonnulls(folder_id, file_id) = 1
CHECK access_tokens_one_target: num_nonnulls(folder_id, file_id) = 1
CHECK access_tokens_hash_is_hex: token_hash ~ \'^[0-9a-f]{64}$\'::text
CHECK access_tokens_level_valid: (level)::text = ANY ((ARRAY[\'read\'::character varying, \'write\'::character varying])::text[])'''
}

Ref "fk_absence_details_approved_by_users_id":"users"."id" < "absence_details"."approved_by"

Ref "fk_absence_details_event_id_events_id":"events"."id" < "absence_details"."event_id"

Ref "access_tokens_authorizer_fkey":"users"."id" < "access_tokens"."authorizer"

Ref "access_tokens_file_id_fkey":"files"."id" < "access_tokens"."file_id" [delete: cascade]

Ref "access_tokens_folder_id_fkey":"folders"."id" < "access_tokens"."folder_id" [delete: cascade]

Ref "fk_area_members_area_id_areas_id":"areas"."id" < "area_members"."area_id"

Ref "fk_area_members_user_id_users_id":"users"."id" < "area_members"."user_id"

Ref "fk_areas_lead_user_id_users_id":"users"."id" < "areas"."lead_user_id"

Ref "fk_collection_events_collection_id_event_collections_id":"event_collections"."id" < "collection_events"."collection_id"

Ref "fk_collection_events_event_id_events_id":"events"."id" < "collection_events"."event_id"

Ref "fk_days_off_user_id_users_id":"users"."id" < "days_off"."user_id"

Ref "fk_event_exceptions_event_id_events_id":"events"."id" < "event_exceptions"."event_id"

Ref "fk_event_participants_area_id_areas_id":"areas"."id" < "event_participants"."area_id"

Ref "fk_event_participants_event_id_events_id":"events"."id" < "event_participants"."event_id"

Ref "fk_event_participants_user_id_users_id":"users"."id" < "event_participants"."user_id"

Ref "fk_events_created_by_users_id":"users"."id" < "events"."created_by"

Ref "fk_events_event_type_id_event_types_id":"event_types"."id" < "events"."event_type_id"

Ref "file_locations_storage_volume_id_fkey":"storage_volumes"."id" < "file_locations"."storage_volume_id"

Ref "files_author_id_fkey":"users"."id" < "files"."author_id"

Ref "files_folder_id_fkey":"folders"."id" < "files"."folder_id"

Ref "folder_areas_area_id_fkey":"areas"."id" < "folder_areas"."area_id" [delete: cascade]

Ref "folder_areas_folder_id_fkey":"folders"."id" < "folder_areas"."folder_id" [delete: cascade]

Ref "folders_owner_id_fkey":"users"."id" < "folders"."owner_id"

Ref "folders_parent_id_fkey":"folders"."id" < "folders"."parent_id"

Ref "fk_logs_user_id_users_id":"users"."id" < "logs"."user_id"

Ref "fk_users_contract_type_id_contract_types_id":"contract_types"."id" < "users"."contract_type_id"

Ref "fk_users_primary_area_id_areas_id":"areas"."id" < "users"."primary_area_id"

Ref "fk_users_role_id_roles_id":"roles"."id" < "users"."role_id"

Ref "fk_users_schedule_id_event_collections_id":"event_collections"."id" < "users"."schedule_id"
